# multijournal

./: .gitignore  CLAUDE.md  README.md  config.toml  deploy.sh  multijournal.service  pyproject.toml  update.sh
src/multijournal/: config.py  journal.py  main.py  terminal.py
src/multijournal/static/: index.html
