[project]
name = "multijournal"
version = "0.1.0"
description = "Stream systemd journal logs to a web UI via WebSockets"
readme = "README.md"
authors = [
    { name = "Patrick Desjardins", email = "mrdesjardins@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.7",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
multijournal = "multijournal.main:run"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.15",
    "ruff>=0.12",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
